# Spendweiss

./: .gitignore  CLAUDE.md  JOURNAL.md  LICENSE  README.md  start.txt
.github/workflows/: ci.yml
backend/: .env.example  groq_client.py  pyproject.toml
backend/data/: cards.json  offers.json  transactions.json
backend/phase1_raw_react/: agent.py  tools.py
backend/phase2_langchain/: agent.py  tools.py
backend/phase3_memory/: agent.py  memory.py  tools.py
backend/phase4_langgraph/: agent.py  graph.py
backend/phase5_critic/: agent.py  graph.py
backend/phase6_multiagent/: agent.py  subscription_hunter.py  supervisor.py
backend/phase7_human_loop/: agent.py  graph.py  triggers.py
backend/phase8_api/: app.py  sessions.py
backend/tests/: test_data.py  test_groq_round_robin.py  test_phase2_tools.py  test_phase3_memory.py  test_phase5_critic.py  test_phase6_multiagent.py  test_phase7_human_loop.py  test_phase8_api.py
docs/superpowers/plans/: 2026-07-16-ci-cd-pipeline-plan.md  2026-07-16-phase0-1-setup-plan.md  2026-07-16-phase2-langchain-plan.md  2026-07-16-phase3-memory-plan.md  2026-07-16-phase5-critic-plan.md  2026-07-17-phase6-multiagent-plan.md  2026-07-17-phase7-human-in-loop-plan.md  2026-07-17-phase8-api-plan.md  2026-07-17-phase9-frontend-plan.md
docs/superpowers/specs/: 2026-07-16-ci-cd-pipeline-design.md  2026-07-16-phase0-1-setup-design.md  (+7 more)
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  api.test.ts  api.ts  decisionPath.test.ts  decisionPath.ts  index.css  types.ts
(+7 files in other folders)
